test/expected/declare_bl_ai.out
declare b as block returning array of int
                             ^
30: error: block returning array; did you mean block returning pointer?
